# new-flask

./: app.py  database.py  pyproject.toml  replit_zip_error_log.txt
templates/: footer.html  home.html  nav.html
