[tool.poetry]
name = "repl_python3_jovian-careers-website"
version = "0.1.0"
description = ""
authors = ["aakashns <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
consultor = "^0.2.0"
sqlalchemy = "^2.0.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
